opam-version: "2.0"
name:         "cachet"
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>"
                "Reynir Björnsson <reynir@reynir.dk>" ]
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>"
                "Reynir Björnsson <reynir@reynir.dk>" ]
homepage:     "https://git.robur.coop/robur/cachet"
bug-reports:  "https://git.robur.coop/robur/cachet"
dev-repo:     "git+https://git.robur.coop/robur/cachet"
doc:          "https://robur-coop.github.io/cachet/"
license:      "MIT"
synopsis:     "A simple cache system for mmap and lwt"
description: """A small library that provides a simple cache system for page-by-page read access on a block device with lwt."""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"        {>= "4.14.0"}
  "dune"         {>= "3.5.0"}
  "lwt"
  "cachet"       {= version}
  "alcotest"     {with-test & >= "1.8.0"}
]
