(library
 (name cachet)
 (public_name cachet)
 (foreign_stubs
  (language c)
  (mode byte)
  (names hash))
 (foreign_stubs
  (language c)
  (mode native)
  (names stub))
 (modules cachet)
 (libraries bstr))

(library
 (name cachet_wr)
 (public_name cachet.wr)
 (modules cachet_wr diet dllist)
 (libraries cachet bstr))
